fix text align in sound div

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -457,7 +457,8 @@ p span {
 .cv-grid h3,
 .cv-content,
 .performances h3,
-.performances h4 {
+.performances h4,
+.sound-projects h3 {
    @media (max-width: 510px) {
       text-align: center;
    }
